# ecoute

./: README.md
ecoute-client/: LICENSE  README.md  docker-compose.yaml  packages.dhall  spago.dhall
ecoute-client/src/: Calendar.purs  DomUtils.purs  JsonUtils.purs  Main.purs
ecoute-client/web/: nginx.conf
ecoute-server/: .gitignore  LICENSE  README.md  docker-compose.yaml  ecoute.cabal  run.sh  shutdown.sh
ecoute-server/app/: Server.hs
images/: checkbox.afdesign
