cabal-version:      3.0
name:               ecoute
version:            0.9.0
license:            MIT
license-file:       LICENSE
author:             Takuro Okada
build-type:         Simple
common warnings
    ghc-options:      -Wall
executable ecoute
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Server.hs
    build-depends:    base
                    , aeson
                    , bytestring
                    , directory
                    , http-types
                    , wai
                    , warp
                    , text
                    , time
                    , vector

